@@ -1,3 +1,8 @@
+2020-02-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* dfa.c: Update from GNULIB. Should help Vax/VMS.
+	* flexmember.h: New file, for dfa.c.
+
 2020-01-28         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* regex_internal.h: Update from GNULIB. Hopefully fixes
