@@ -1,3 +1,9 @@
+2020-02-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awk.h, dfa.c: Move include of mbsupport.h to ...
+	* custom.h: ... here.
+	* configure.ac: Add check for isblank.
+
 2020-01-27         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* custom.h: Fix non-VMS compilation.
